Redid portfolion descriptions

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div id="mainText">
               <p>
                 I am pragmatist, from the practical to the theoretical level. I
-                come to the tech market from the philosophy world, where I
+                come to the tech secotr from the philosophy world, where I
                 studied American Pragmatism and the philosophy of science. This
                 education has shaped the principles which guide my work and
                 allow me to conceptualize, analyze and realize objectives, be
@@ -145,8 +145,8 @@
                 system design.
               </p>
               <p>
-                Recently graduated from
-                <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a>
+                Last fall I graduated from
+                <a href="https://elevenfifty.org/" target="blank"> Eleven Fifty Academy </a>
                 where I learned the particulars of web development related
                 technoligies and programming languages. Through this program, I
                 gained a comprehension of web tools and applications which I now
@@ -379,7 +379,7 @@
                 <img src="./assets/pexels-mateusz-dach-332835.jpg" alt="">
               <div class="overlay mainOverlay"> 
                 <a href=https://runnersheetsclient.herokuapp.com/ target="blank" class="mainProjectLinks appLink"><h1>RunnerSheets</h1></a> 
-                  <a href=https://runnersheetsclient.herokuapp.com/ target="blank"  class="mainProjectLinks appLink"> RunnerSheets (working title) is an app in development designed to be used by athletic teams and running clubs. Essentially, it is a way for coaches and athletes, or club members to share activity information. This enables clubs to have peer to peer coaching and team coaches to track athlete fitness, particularly during the off season, and share feedback. Data sharing and communication form the bedrock of this apps development framework. This project relies on React, Node.js, PostgreSQL, Express.js, Sequelize, Bcrypt, JWT and Heroku.</a> 
+                  <a href=https://runnersheetsclient.herokuapp.com/ target="blank"  class="mainProjectLinks appLink"> Activity Data Sharing App</a> 
                   <div class="videoDemoContainer">
                     <a class="documentationLinks" href="https://github.com/jonnyschult/runnersheetsClient/blob/main/README.md" target="blank">Client Documentation</a>
                     <iframe
@@ -406,12 +406,7 @@
                 <img src="./assets/pexels-ksenia-chernaya-3952078.jpg" alt="" />
                 <div class="overlay">
                   <h1>BiblioQuest</h1>
-                  Biblioquest is the product of a group project in a web
-                  development intensive course. My primary responsibilities were
-                  to design the back end for data persistence using Node.js,
-                  Express.js, Sequelize, Bcrypt, JWT and PostgreSQL, and
-                  migrating the data in the client from Google API to the
-                  server.
+                  Team Training Project
                 </div>
               </a>
               <a
@@ -422,9 +417,7 @@
                 <img src="./assets/studioGhibliAPI.jpg" alt="" />
                 <div class="overlay">
                   <h1>Studio Ghibli API</h1>
-                  This project draws data from the Studio Ghibli API and
-                  presents with an HTML, CSS and JavaScript based website. The
-                  page relies on the DOM for dynamic website content.
+                  Early Vanilla JavaScript Project
                 </div>
               </a>
             </div>
@@ -438,9 +431,7 @@
                 <img src="./assets/creatureCSS.jpg" alt="" />
                 <div class="overlay">
                   <h1>CSS Creature</h1>
-                  CSS created creatures illustrate the theme of human
-                  intellectual evolution. Click on the links to read about some
-                  of the key players in the history of logic.
+                  CSS Project
                 </div>
               </a>
               <a
@@ -451,9 +442,7 @@
                 <img src="./assets/staticLayout.jpg" alt="" />
                 <div class="overlay">
                   <h1>Static Layout</h1>
-                  This project aimed to test and expand styling skills with CSS
-                  and HTML. There is no JavaScript or DOM manipulation on this
-                  page.
+                  HTML and CSS Static Clone of Wizarding World
                 </div>
               </a>
             </div>
