updated pictures in about me.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 <div class="picTint">Philosophy</div>
               </div>
               <div class="picHolder">
-                <img src="assets/lighthouse.jpg" alt="" class="aboutPics" />
-                <div class="picTint">Lake Michigan</div>
+                <img src="assets/arduinoHeart.png" alt="" class="aboutPics" />
+                <div class="picTint">Embedded Software</div>
               </div>
               <div class="picHolder">
                 <img src="assets/spousing.jpg" alt="" class="aboutPics" />
