Updated to include RSDrum.

--- a/index.html
+++ b/index.html
@@ -374,29 +374,31 @@
         <div id="projectContainer">
           <h1 id="portfolio">Projects</h1>
           <div id="projectItems">
-            <div class="projectOne">
-              <div class="mainProject">
-                <img src="./assets/pexels-mateusz-dach-332835.jpg" alt="">
-              <div class="overlay mainOverlay"> 
-                <a href=https://runnersheetsclient.herokuapp.com/ target="blank" class="mainProjectLinks appLink"><h1>RunnerSheets</h1></a> 
-                  <a href=https://runnersheetsclient.herokuapp.com/ target="blank"  class="mainProjectLinks appLink"> Activity Data Sharing App</a> 
-                  <div class="videoDemoContainer">
-                    <a class="documentationLinks" href="https://github.com/jonnyschult/runnersheetsClient/blob/main/README.md" target="blank">Client Documentation</a>
-                    <iframe
-                    class="videoDemo"
-                    width="280"
-                    height="162"
-                    src="https://embed.storyxpress.co/embed/kkiwligoua6iyep4d"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                  <a class="documentationLinks" href="https://github.com/jonnyschult/runnersheetsServer/blob/main/README.md" target="blank">Server Documentation</a>
-                  </div>
+            <div id="twoToThree">
+              <a
+                class="projectLink"
+                href="https://rsdrum.com/"
+                target="blank"
+              >
+                <img src="./assets/snareDrum.jpg" alt="" />
+                <div class="overlay">
+                  <h1>R.S. Drum Studio</h1>
+                  <p>Full stack web application for a drum instructor</p>
                 </div>
-              </div>
+              </a>
+              <a
+                class="projectLink"
+                href="https://runnersheetsclient.herokuapp.com/"
+                target="blank"
+              >
+                <img src="./assets/pexels-mateusz-dach-332835.jpg" alt="" />
+                <div class="overlay">
+                  <h1>RunnerSheets</h1>
+                  <p>Prototype of run data collection and sharing tool</p>
+                  <p>Currently integrated with FitBit</p>
+                </div>
+              </a>
             </div>
-
             <div id="twoToThree">
               <a
                 class="projectLink"
@@ -406,7 +408,7 @@
                 <img src="./assets/pexels-ksenia-chernaya-3952078.jpg" alt="" />
                 <div class="overlay">
                   <h1>BiblioQuest</h1>
-                  Team Training Project
+                  <p>Team Training Project</p>
                 </div>
               </a>
               <a
@@ -417,7 +419,7 @@
                 <img src="./assets/studioGhibliAPI.jpg" alt="" />
                 <div class="overlay">
                   <h1>Studio Ghibli API</h1>
-                  Early Vanilla JavaScript Project
+                  <p>Early Vanilla JavaScript Project</p>
                 </div>
               </a>
             </div>
@@ -431,7 +433,7 @@
                 <img src="./assets/creatureCSS.jpg" alt="" />
                 <div class="overlay">
                   <h1>CSS Creature</h1>
-                  CSS Project
+                  <p>CSS Project</p>
                 </div>
               </a>
               <a
@@ -442,7 +444,7 @@
                 <img src="./assets/staticLayout.jpg" alt="" />
                 <div class="overlay">
                   <h1>Static Layout</h1>
-                  HTML and CSS Static Clone of Wizarding World
+                  <p>HTML and CSS Static Clone of Wizarding World</p>
                 </div>
               </a>
             </div>
@@ -505,6 +507,14 @@
               <div class="badgeDiv">
                 <img src="./assets/Postgres.png" alt="" class="skillBadge" />
                 <p class="badgeTitle">PostgreSQL</p>
+              </div>
+              <div class="badgeDiv">
+                <img src="./assets/Amazon_Web_Services_Logo.svg" alt="" class="skillBadge" />
+                <p class="badgeTitle">Amazon Web Services</p>
+              </div>
+              <div class="badgeDiv">
+                <img src="./assets/Typescript_logo_2020.svg" alt="" class="skillBadge" />
+                <p class="badgeTitle">TypeScript</p>
               </div>
             </div>
           </div>
